--- a/main.css
+++ b/main.css
@@ -1,6 +1,12 @@
 :root{
     --maine-color: #a627e6;
     --hover-color: #811eb3;
+
+    --background-image: url(https://i.imgur.com/59Kwrms.jpeg);
+}
+
+.bg-1QIAus{
+    background-image: var(--background-image);
 }
 
 .typeWindows-2-g3UY {
