--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@
 
 .bg-1QIAus{
     background-image: var(--background-image);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .typeWindows-2-g3UY {
