--- a/main.css
+++ b/main.css
@@ -22,6 +22,34 @@
 }
 
 .withFrame-2dL45i{
-    margin-top: 4px;
+    padding-top: 4px;
     border-top: 4px solid var(--top-color);
+}
+
+.container-2cd8Mz{
+    background-color: transparent;
+}
+
+.container-ZMc96U.themed-Hp1KC_ {
+    background: transparent;
+}
+
+.sidebar-1tnWFu{
+    background: transparent;
+}
+
+.privateChannels-oVe7HL{
+    background: transparent;
+}
+
+.scroller-WSmht3{
+    background: transparent;
+}
+
+.panels-3wFtMD{
+    background: var(--top-color);
+}
+
+.wrapper-1_HaEi{
+    background: transparent;
 }
